# mcp-files-server

./: .gitignore  Dockerfile  fly.toml  github_oauth.py  main.py  oauth_store.py  pyproject.toml  server.py
data/: sample.txt
