[project]
name = "mcp-files-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0",
    "cryptography>=43.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-starlette>=0.64b0",
    "opentelemetry-instrumentation-httpx>=0.64b0",
]
